# REST_REACT

BACKEND/: .gitignore  pyproject.toml
BACKEND/allprojects/: asgi.py  settings.py  urls.py  wsgi.py
BACKEND/certs/: server-cert.pem  server-key.pem
BACKEND/videocalls/: consumers.py  routing.py
BACKEND/votingsys/: apps.py  permissions.py  serializers.py  urls.py  views.py
FRONTEND/videocalls/: package-lock.json  package.json  vite.config.js
FRONTEND/videocalls/certs/: localhost+2-key.pem  localhost+2.pem
FRONTEND/videocalls/src/: App.jsx
FRONTEND/videocalls/src/components/: VideoCall.jsx  VideoContainer.jsx  VideoControls.jsx
FRONTEND/videocalls/src/pages/: Home.jsx  VideoCallPage.jsx
FRONTEND/votingsys/: package-lock.json  package.json
