[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["j1ere <jeremywambua106@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.2"
djangorestframework = "^3.16.0"
psycopg2 = "^2.9.10"
djangorestframework-simplejwt = "^5.5.0"
channels = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
